--- a/industries/coal-mine.yaml
+++ b/industries/coal-mine.yaml
@@ -242,7 +242,9 @@ tiles:
   - alwaysDraw: true
     drawType: recolour
     sprite:
-      id: 2022
+      filename: industries/coal-mine/7.png
+      left: -31
+      top: 0
   - alwaysDraw: false
     drawType: recolour
     sprite:
